csrc/tests/codegen_probes/errors/err_read_whole_array.bas
' REJECT: READ into a whole array.
' zxbparser p_read:1803 "Cannot read '%s'. It's an array".
Dim a(10) As Byte
Read a
Data 1
